--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -10,19 +10,19 @@
     app:exampleDrawable="@android:drawable/ic_menu_add"
     app:exampleString="Hello, MainView">
     <Button
-        android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:text="Text"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp"
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:layout_width="368dp"
+        tools:layout_editor_absoluteX="8dp" />
     <com.phaseshiftlab.cyrilliscript.MainWritingView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="#aaa"
-        android:layout_width="368dp"
         android:layout_height="200dp"
-        tools:layout_editor_absoluteX="8dp"
         android:id="@+id/drawing_input_view"
-        tools:layout_editor_absoluteY="48dp">
+        tools:layout_editor_absoluteY="48dp"
+        android:layout_width="368dp"
+        tools:layout_editor_absoluteX="8dp">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
     </com.phaseshiftlab.cyrilliscript.MainView>
