--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -1,7 +1,9 @@
 <com.phaseshiftlab.cyrilliscript.MainView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
     android:layout_height="300dp"
     android:background="#ccc"
     app:exampleColor="#33b5e5"
@@ -14,7 +16,7 @@
         android:text="Text"
         tools:layout_editor_absoluteY="0dp"
         android:id="@+id/button"
-        android:layout_width="368dp"
+        android:layout_width="88dp"
         tools:layout_editor_absoluteX="8dp" />
     <com.phaseshiftlab.cyrilliscript.MainWritingView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,7 +24,7 @@
         android:layout_height="200dp"
         android:id="@+id/drawing_input_view"
         tools:layout_editor_absoluteY="48dp"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         tools:layout_editor_absoluteX="8dp">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
     </com.phaseshiftlab.cyrilliscript.MainView>
