--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -5,7 +5,7 @@
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_height="300dp"
-    android:background="#ccc"
+    android:background="#ef5350"
     app:exampleColor="#33b5e5"
     android:layout_alignParentBottom="true"
     app:exampleDimension="24sp"
@@ -20,11 +20,12 @@
         tools:layout_editor_absoluteX="8dp" />
     <com.phaseshiftlab.cyrilliscript.MainWritingView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="#aaa"
+        android:background="#ff8a80"
         android:layout_height="200dp"
         android:id="@+id/drawing_input_view"
-        tools:layout_editor_absoluteY="48dp"
-        android:layout_width="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        tools:layout_editor_absoluteY="10dp"
+        android:layout_width="100dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
     </com.phaseshiftlab.cyrilliscript.MainView>
