--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -1,31 +1,34 @@
 <com.phaseshiftlab.cyrilliscript.MainView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="0dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
+    android:layout_width="match_parent"
     android:layout_height="300dp"
+    android:layout_alignParentBottom="true"
     android:background="#ef5350"
     app:exampleColor="#33b5e5"
-    android:layout_alignParentBottom="true"
     app:exampleDimension="24sp"
     app:exampleDrawable="@android:drawable/ic_menu_add"
     app:exampleString="Hello, MainView">
     <Button
-        android:layout_height="wrap_content"
-        android:text="Text"
-        tools:layout_editor_absoluteY="0dp"
         android:id="@+id/button"
         android:layout_width="88dp"
-        tools:layout_editor_absoluteX="8dp" />
-    <com.phaseshiftlab.cyrilliscript.MainWritingView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="#ff8a80"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:text="Text"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="8dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.phaseshiftlab.cyrilliscript.MainWritingView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawing_input_view"
-        tools:layout_editor_absoluteY="10dp"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:background="#ff8a80"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/button">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
     </com.phaseshiftlab.cyrilliscript.MainView>
