--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -4,31 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="300dp"
     android:layout_alignParentBottom="true"
-    android:background="#ef5350"
+    android:background="#bdbdbd"
     app:exampleColor="#33b5e5"
     app:exampleDimension="24sp"
     app:exampleDrawable="@android:drawable/ic_menu_add"
     app:exampleString="Hello, MainView">
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/clear"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
-        android:text="Text"
-        tools:layout_constraintTop_creator="1"
+        android:layout_marginLeft="-10dp"
         android:layout_marginStart="8dp"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginTop="-9dp"
+        android:onClick="clearDrawingCanvas"
+        android:text="@string/clear"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <com.phaseshiftlab.cyrilliscript.MainWritingView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawing_input_view"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:background="#ff8a80"
+        android:background="#f5f5f5"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/button">
+        app:layout_constraintTop_toBottomOf="@+id/clear">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
     </com.phaseshiftlab.cyrilliscript.MainView>
