--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -5,19 +5,47 @@
     app:exampleDimension="24sp"
     app:exampleDrawable="@android:drawable/ic_menu_add"
     app:exampleString="Hello, MainView"
-    style="@style/MainViewStyle">
+    style="@style/MainViewStyle"
+    tools:layout_editor_absoluteY="0dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <Button
-        android:id="@+id/clear"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="-10dp"
+        android:id="@+id/clearButton"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="-9dp"
         android:onClick="clearDrawingCanvas"
         android:text="@string/clear"
-        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/drawing_input_view" />
+
+    <Button
+        android:id="@+id/backspaceButton"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:text="@string/backspace"
+        android:onClick="sendBackspace"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/drawing_input_view"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="4dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/clearButton"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintVertical_bias="0.307" />
+    <Button
+        android:id="@+id/enterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/enter"
+        android:onClick="sendEnter"
+        app:layout_constraintLeft_toRightOf="@+id/backspaceButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
@@ -26,10 +54,17 @@
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:background="@color/main_writing_view_bg"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="38dp"
+        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/clear">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.0">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
-    </com.phaseshiftlab.cyrilliscript.MainView>
+
+
+
+
+</com.phaseshiftlab.cyrilliscript.MainView>
