--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -1,30 +1,28 @@
 <com.phaseshiftlab.cyrilliscript.MainView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:exampleColor="#33b5e5"
-    app:exampleDimension="24sp"
-    app:exampleDrawable="@android:drawable/ic_menu_add"
-    app:exampleString="Hello, MainView"
+    android:id="@+id/main_view"
     style="@style/MainViewStyle"
     tools:layout_editor_absoluteY="0dp"
     tools:layout_editor_absoluteX="0dp">
 
     <Button
         android:id="@+id/clearButton"
-        android:layout_width="wrap_content"
+        android:layout_width="44dp"
         android:layout_height="36dp"
-        android:layout_marginStart="8dp"
+        android:gravity="center_horizontal|top"
+        android:layout_marginStart="4dp"
         android:onClick="clearDrawingCanvas"
-        android:text="@string/clear"
-        tools:layout_constraintBaseline_creator="1"
+        android:drawableStart="@drawable/ic_clear_black_24dp"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/drawing_input_view" />
+        app:layout_constraintLeft_toLeftOf="@+id/drawing_input_view"
+        tools:layout_editor_absoluteY="0dp" />
 
     <Button
         android:id="@+id/backspaceButton"
-        android:layout_width="wrap_content"
+        android:layout_width="44dp"
         android:layout_height="36dp"
-        android:text="@string/backspace"
+        android:drawableStart="@drawable/ic_backspace_black_24dp"
         android:onClick="sendBackspace"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintBottom_creator="1"
@@ -34,25 +32,44 @@
         android:layout_marginBottom="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/clearButton"
-        android:layout_marginLeft="0dp"
         app:layout_constraintVertical_bias="0.307" />
     <Button
-        android:id="@+id/enterButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/spaceButton"
+        android:layout_width="44dp"
         android:layout_height="36dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/enter"
-        android:onClick="sendEnter"
+        android:drawableStart="@drawable/ic_space_bar_black_24dp"
+        android:onClick="sendSpace"
         app:layout_constraintLeft_toRightOf="@+id/backspaceButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
+    <Button
+        android:id="@+id/undoButton"
+        android:layout_width="44dp"
+        android:layout_height="36dp"
+        android:drawableStart="@drawable/ic_undo_black_24dp"
+        android:onClick="deleteLastPath"
+        app:layout_constraintLeft_toRightOf="@+id/spaceButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
+    <Spinner
+        android:id="@+id/inputSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:background="@android:drawable/btn_default_small"
+        app:layout_constraintLeft_toRightOf="@+id/undoButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
+    <Button
+        android:id="@+id/enterButton"
+        android:layout_width="44dp"
+        android:layout_height="36dp"
+        android:drawableStart="@drawable/ic_keyboard_return_black_24dp"
+        android:onClick="sendEnter"
+        app:layout_constraintLeft_toRightOf="@+id/inputSelect"
         app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintLeft_creator="1" />
 
     <com.phaseshiftlab.cyrilliscript.MainWritingView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawing_input_view"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:background="@color/main_writing_view_bg"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
@@ -63,8 +80,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.0">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
-
-
-
-
 </com.phaseshiftlab.cyrilliscript.MainView>
