reworked permission code, factored out events into a separate library, some code cleanup and bump minAPI to 22

--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -38,6 +38,7 @@
         android:layout_width="44dp"
         android:layout_height="36dp"
         android:drawableStart="@drawable/ic_space_bar_black_24dp"
+        android:tint="@color/white"
         android:onClick="sendSpace"
         app:layout_constraintLeft_toRightOf="@+id/backspaceButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
