--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="transparent">#00000000</color>
     <color name="main_writing_view_bg">#f5f5f5</color>
     <color name="black_overlay">#66000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
