--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -50,23 +50,32 @@
         android:onClick="deleteLastPath"
         app:layout_constraintLeft_toRightOf="@+id/spaceButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
-    <Spinner
-        android:id="@+id/inputSelect"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:background="@android:drawable/btn_default_small"
-        app:layout_constraintLeft_toRightOf="@+id/undoButton"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
     <Button
         android:id="@+id/enterButton"
         android:layout_width="44dp"
         android:layout_height="36dp"
         android:drawableStart="@drawable/ic_keyboard_return_black_24dp"
         android:onClick="sendEnter"
-        app:layout_constraintLeft_toRightOf="@+id/inputSelect"
+        app:layout_constraintLeft_toRightOf="@+id/spaceButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
         tools:layout_constraintLeft_creator="1" />
-
+    <Spinner
+        android:id="@+id/inputSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:background="@android:drawable/btn_default_small"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="@+id/languageSelect" />
+    <Spinner
+        android:id="@+id/languageSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:visibility="gone"
+        android:background="@android:drawable/btn_default_small"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
     <com.phaseshiftlab.cyrilliscript.MainWritingView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawing_input_view"
         android:layout_width="0dp"
