wire up the statistics widget to query the statistics db and display the events count and the average confidence

--- a/app/src/main/res/drawable/widgetshape.xml
+++ b/app/src/main/res/drawable/widgetshape.xml
@@ -8,8 +8,8 @@
 
     <gradient
         android:angle="225"
-        android:endColor="#DD2ECCFA"
-        android:startColor="#DD000000" />
+        android:endColor="#ffa726"
+        android:startColor="#3e2723" />
 
     <corners
         android:bottomLeftRadius="7dp"
