--- a/ocrlib/src/main/res/layout/activity_soft_keyboard.xml
+++ b/ocrlib/src/main/res/layout/activity_soft_keyboard.xml
@@ -58,5 +58,17 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/user_defined_dictionary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
+
 
 </android.support.constraint.ConstraintLayout>
