--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -6,85 +6,97 @@
     tools:layout_editor_absoluteY="0dp"
     tools:layout_editor_absoluteX="0dp">
 
-    <ToggleButton
-        android:id="@+id/saveToUserDictionary"
-        android:layout_width="59dp"
-        android:layout_height="37dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:textOff="@string/save"
-        android:textOn="@string/save"
-        android:visibility="gone"
-        tools:layout_editor_absoluteY="0dp"/>
-
-    <Button
-        android:id="@+id/clearButton"
-        android:layout_width="44dp"
-        android:layout_height="36dp"
-        android:gravity="center_horizontal|top"
-        android:onClick="clearDrawingCanvas"
-        android:drawableStart="@drawable/ic_clear_black_24dp"
-        tools:layout_editor_absoluteY="0dp"
-        app:layout_constraintLeft_toRightOf="@+id/saveToUserDictionary"
-        />
-
-    <Button
-        android:id="@+id/backspaceButton"
-        android:layout_width="44dp"
-        android:layout_height="36dp"
-        android:drawableStart="@drawable/ic_backspace_black_24dp"
-        android:onClick="sendBackspace"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/buttonRow"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         app:layout_constraintBottom_toTopOf="@+id/drawing_input_view"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/clearButton"
-        app:layout_constraintVertical_bias="0.307" />
-    <Button
-        android:id="@+id/spaceButton"
-        android:layout_width="44dp"
-        android:layout_height="36dp"
-        android:drawableStart="@drawable/ic_space_bar_black_24dp"
-        android:tint="@color/white"
-        android:onClick="sendSpace"
-        app:layout_constraintLeft_toRightOf="@+id/backspaceButton"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
-    <Button
-        android:id="@+id/undoButton"
-        android:layout_width="44dp"
-        android:layout_height="36dp"
-        android:drawableStart="@drawable/ic_undo_black_24dp"
-        android:onClick="deleteLastPath"
-        app:layout_constraintLeft_toRightOf="@+id/spaceButton"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton" />
-    <Button
-        android:id="@+id/enterButton"
-        android:layout_width="44dp"
-        android:layout_height="36dp"
-        android:drawableStart="@drawable/ic_keyboard_return_black_24dp"
-        android:onClick="sendEnter"
-        app:layout_constraintLeft_toRightOf="@+id/undoButton"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
-        tools:layout_constraintLeft_creator="1" />
-    <Spinner
-        android:id="@+id/inputSelect"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:background="@android:drawable/btn_default_small"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/languageSelect" />
-    <Spinner
-        android:id="@+id/languageSelect"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:visibility="gone"
-        android:background="@android:drawable/btn_default_small"
-        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ToggleButton
+            android:id="@+id/saveToUserDictionary"
+            android:layout_width="60dp"
+            android:layout_height="48dp"
+            android:textOff="@string/save"
+            android:textOn="@string/save"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <Button
+            android:id="@+id/clearButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_clear_black_24dp"
+            android:onClick="clearDrawingCanvas"
+            app:layout_constraintLeft_toRightOf="@+id/saveToUserDictionary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <Button
+            android:id="@+id/backspaceButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_backspace_black_24dp"
+            android:onClick="sendBackspace"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/clearButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/spaceButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_space_bar_black_24dp"
+            android:onClick="sendSpace"
+            android:tint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/backspaceButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/undoButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_undo_black_24dp"
+            android:onClick="deleteLastPath"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/spaceButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/enterButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_keyboard_return_black_24dp"
+            android:onClick="sendEnter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/undoButton"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintLeft_creator="1" />
+
+        <Spinner
+            android:id="@+id/languageSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginRight="-1dp"
+            android:background="@android:drawable/btn_default_small"
+            android:visibility="gone"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <Spinner
+            android:id="@+id/inputSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:background="@android:drawable/btn_default_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/languageSelect" />
+
+    </android.support.constraint.ConstraintLayout>
+
     <com.phaseshiftlab.cyrilliscript.MainWritingView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawing_input_view"
         android:layout_width="0dp"
@@ -93,10 +105,9 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="38dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRow"
         app:layout_constraintHorizontal_bias="0.0">
     </com.phaseshiftlab.cyrilliscript.MainWritingView>
 </com.phaseshiftlab.cyrilliscript.MainView>
