--- a/ocrlib/src/main/res/layout/language_item_row.xml
+++ b/ocrlib/src/main/res/layout/language_item_row.xml
@@ -8,7 +8,7 @@
     tools:context="com.phaseshiftlab.ocrlib.PermissionRequestActivity">
 
     <TextView
-        android:id="@+id/languageName"
+        android:id="@+id/languageDescription"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
