--- a/ocrlib/src/main/res/layout/language_item_row.xml
+++ b/ocrlib/src/main/res/layout/language_item_row.xml
@@ -27,6 +27,15 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/download"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/deleteLanguageButton" />
+    <Button
+        android:id="@+id/deleteLanguageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
