--- a/ocrlib/src/main/res/layout/activity_soft_keyboard.xml
+++ b/ocrlib/src/main/res/layout/activity_soft_keyboard.xml
@@ -66,6 +66,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/user_defined_dictionary"
+        android:onClick="launchUserDictActivity"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
