fix regression: User defined dictionary deletion is throwing errors

--- a/languagelib/src/main/res/layout/dictionary_activity.xml
+++ b/languagelib/src/main/res/layout/dictionary_activity.xml
@@ -20,12 +20,11 @@
         app:layout_constraintVertical_bias="0.1" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="@string/delete_selected"
-        android:onClick="deleteSelected"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dictionaryList" />
 </android.support.constraint.ConstraintLayout>
